--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 html {
   min-height: 100%;
-  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
 }
 body {
+  padding: 0;
+  margin: 0;
   width: 100%;
-  background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
   font-size: 12px;
   font-family: "Kumbh Sans", sans-serif;
 }
@@ -16,42 +19,79 @@ h1 {
   color: hsl(237, 12%, 33%);
 }
 
-#main-content {
+h4 {
+  font-weight: 400;
+  color: hsl(240, 6%, 50%);
+}
+
+#faq-content {
+  height: fit-content;
   background: white;
-  width: 70%;
-  margin: 0 auto;
-  padding: 2em;
+  width: 65%;
+  margin: 12em auto;
   display: flex;
+  position: relative;
+  border-radius: 2em;
 }
 
 #div-images {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   position: relative;
+  width: 50%;
 }
 
 #img-pattern {
   position: absolute;
-  height: 600px;
-  width: 600px;
-  right: 45px;
+  height: 800px;
+  width: 800px;
+  top: -248px;
+  right: 87px;
 }
 
 #img-woman {
   position: relative;
   width: 400px;
   /* margin: auto 0; */
-  top: 115px;
-  right: 92px;
+  /* top: 90px; */
+  right: 67px;
 }
 
 #img-box {
-  position: relative;
-  bottom: 104px;
-  right: 125px;
+  position: absolute;
+  left: -93px;
+  top: 144px;
 }
 
-#div-faqs div {
+#div-faqs {
+  padding: 4em 0em 4em 0em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 40%;
+}
+
+.div-ques-ans {
   border-bottom: 1px solid hsl(240, 5%, 91%);
 }
+
+.div-ques-ans > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.div-ques-ans > p {
+  display: none;
+  color: hsl(240, 6%, 50%);
+}
+
+.ques:hover {
+  color: rgb(209 77 13 / 47%) !important;
+}
+
 /* .attribution {
   font-size: 11px;
   text-align: center;
