--- a/style.css
+++ b/style.css
@@ -54,8 +54,6 @@ h4 {
 #img-woman {
   position: absolute;
   width: 400px;
-  /* margin: auto 0; */
-  /* top: 90px; */
   right: 67px;
 }
 
@@ -85,10 +83,12 @@ h4 {
 
 .div-ques-ans > p {
   margin: 0px 0px 6px 0px;
-  display: none;
   color: hsl(240, 6%, 50%);
 }
 
+.ans {
+  display: none;
+}
 .ques:hover {
   color: rgb(209 77 13 / 47%) !important;
 }
@@ -99,6 +99,19 @@ h4 {
 }
 .attribution a {
   color: hsl(228, 29%, 93%);
+}
+
+.arrow_transform {
+  transition: 0.5s;
+  transform: rotate(180deg);
+}
+
+.ques_style_active {
+  color: hsl(237, 12%, 33%);
+  font-weight: 600;
+}
+.ans_style_active {
+  display: block;
 }
 
 @media (max-width: 1015px) {
